2006-06-24  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/test-harness.el: Improve handling of unexpected errors.

2006-06-03  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/mule-tests.el:
	Add checks that several Unicode characters, expressed as
	UTF-8-encoded strings, are handled correctly by the UTF-8 support
	of the escape-quoted character set. 
	* automated/mule-tests.el (unicode-code-point-to-utf-8-string): New.
	Convert a Unicode code point to the equivalent UTF-8 string. 
	This is a naive implementation in Lisp. 

2006-05-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.27 "fiddleheads" is released.

2006-03-31  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.26 "endive" is released.

2006-02-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.25 "eggplant" is released.

2005-12-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.24 "dandelion" is released.

2005-12-08  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/syntax-tests.el (backward-up-list): New test.
	Thanks to Zacjev Evgeny for report, Aidan Kehoe for reproduction.

2005-10-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.23 "daikon" is released.

2005-09-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.22 "cucumber" is released.

2005-05-28  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.21 "corn" is released.

2005-03-11  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.20 "cilantro" is released.

2005-02-25  Adrian Aichner  <adrian@xemacs.org>

	* automated/region-tests.el: Test regions and zmacs-regions.

2005-02-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.19 "chives" is released.

2005-02-01  Vin Shelton  <acs@xemacs.org>

	* automated/regexp-tests.el: Added test for stale match data with
	shy groups authored by Arnaud Giersch <arnaud.giersch@free.fr>

2005-01-13  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el: